# LibMath

./: .gitignore  CMakeLists.txt  README.md  cmake_build.bat  cmake_gen.bat
.github/actions/setup/: action.yml
.github/actions/setup-windows/: action.yml
.github/workflows/: main.yml
LibMath/: CMakeLists.txt
LibMath/Header/: Arithmetic.h  Arithmetic.inl  Matrix4Vector4Operation.h  Quaternion.h  Quaternion.inl  Transform.h  Transform.inl  TransformNotifier.h  TransformNotifier.inl  Trigonometry.h
LibMath/Header/Angle/: Degree.h  Degree.inl  Radian.h  Radian.inl
LibMath/Header/Geometry/: BoundingBox.h  Frustum.h
LibMath/Header/Matrix/: Matrix3.inl  Matrix4.h  Matrix4.inl  TMatrix.h  TMatrix.inl
LibMath/Header/Vector/: Vector2.h  Vector2.inl  Vector3.h  Vector3.inl  Vector4.h  Vector4.inl
LibMath/Source/: Angle.cpp  Arithmetic.cpp  Matrix.cpp  Transform.cpp  TransformNotifier.cpp  Vector.cpp
LibMath_UnitTest/: CMakeLists.txt
LibMath_UnitTest/Source/: Angle_UnitTest.cpp  Arithmetic_UnitTest.cpp  Main.cpp  Matrix_UnitTest.cpp  Quaternion_UnitTest.cpp  Transform_UnitTest.cpp  Trigonometry_UnitTest.cpp  Vector2_UnitTest.cpp  Vector3_UnitTest.cpp  Vector4_UnitTest.cpp  Vector_UnitTest.cpp
